Fixed entity vertical alignment.

--- a/includes/ts_ck_entity_embed_browser.css
+++ b/includes/ts_ck_entity_embed_browser.css
@@ -1,3 +1,7 @@
+.view-content .views-view-grid tr {
+    vertical-align: text-top !important;
+}
+
 .view-content .entity {
     border: 4px solid #FFF;
 }
